--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <h2>Gerador de senhas</h2>
-      <input id="result" type="text" readonly value="bb4r4v4rw3" />
+      <input id="result" type="text" readonly />
       <div class="content">
         <label>Tamanho </label>
         <input id="passLenght" type="number" min="4" max="20" value="8" />
