--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content contentBtn ">
         <button id="btnGenerate" class="btn btn--green">
           <i class="fas fa-key"></i>Gerar
         </button>
